fix alignment

--- a/app.scss
+++ b/app.scss
@@ -116,7 +116,7 @@ hgroup {
 	h1 {
 		margin: 0;
 		position: absolute;
-		bottom: 76px;
+		bottom: 80px;
 		left: 0;
 		width: 100%;
 	}
